--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,8 +69,15 @@ gtag('config', '{{site.ganalytics}}');
               </svg>
             </a>
 
+            <!-- GitHub -->
+            <a class="d-inline-block social-icon ml-2" target="_blank" href="{{ site.social.github }}">
+              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+            </a>
+
             <!-- WhatsApp -->
-            <a class="d-inline-block social-icon ml-2" target="_blank" href="{{ site.whatsapp }}">
+            <a class="d-inline-block social-icon ml-2" target="_blank" href="https://wa.me/{{ site.social.whatsapp | remove: '+' | remove: ' ' }}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                 <path d="M13.601 2.326A7.875 7.875 0 0 0 8 0a7.946 7.946 0 0 0-6.927 11.62L0 16l4.522-1.067A7.943 7.943 0 0 0 8 16c4.418 0 8-3.582 8-8a7.875 7.875 0 0 0-2.399-5.674zm-5.6 12.34c-1.18 0-2.34-.315-3.356-.908l-.239-.141-2.682.633.717-2.612-.156-.269a6.493 6.493 0 0 1 5.716-9.61c3.584 0 6.5 2.916 6.5 6.5s-2.916 6.5-6.5 6.5zm3.689-4.986c-.202-.101-1.193-.589-1.378-.656-.185-.068-.32-.101-.454.101-.135.202-.52.655-.637.789-.118.135-.236.152-.438.051a5.262 5.262 0 0 1-1.55-.957 5.805 5.805 0 0 1-1.074-1.328c-.113-.195-.012-.3.085-.396.087-.086.202-.219.303-.328.101-.111.135-.185.202-.303.067-.118.034-.236-.017-.336-.051-.101-.454-1.096-.622-1.505-.164-.395-.332-.342-.454-.348l-.387-.007a.862.862 0 0 0-.625.292c-.215.235-.815.796-.815 1.94 0 1.144.835 2.25.951 2.406.118.152 1.642 2.508 3.978 3.51.556.24.99.384 1.328.491.558.177 1.066.152 1.469.092.448-.067 1.193-.487 1.361-.957.168-.47.168-.871.118-.957-.05-.084-.185-.135-.387-.236z"/>
               </svg>
