inserindo o botão do curriculo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,11 +105,12 @@ gtag('config', '{{site.ganalytics}}');
           
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto font-weight-bold d-flex align-items-center">
-              {% for item in site.data.menus.topmenu %}
               <li class="nav-item">
-                <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
+                <a class="nav-link px-3" href="{{site.baseurl}}/">Home</a>
               </li>
-              {% endfor %}
+              <li class="nav-item">
+                <a class="nav-link px-3" href="{{site.baseurl}}/curriculo/">Currículo</a>
+              </li>
             </ul>
           </div>
 
