--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,13 +76,6 @@ gtag('config', '{{site.ganalytics}}');
               </svg>
             </a>
 
-            <!-- WhatsApp -->
-            <a class="d-inline-block social-icon ml-2" target="_blank" href="https://wa.me/{{ site.social.whatsapp | remove: '+' | remove: ' ' }}">
-              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-                <path d="M13.601 2.326A7.875 7.875 0 0 0 8 0a7.946 7.946 0 0 0-6.927 11.62L0 16l4.522-1.067A7.943 7.943 0 0 0 8 16c4.418 0 8-3.582 8-8a7.875 7.875 0 0 0-2.399-5.674zm-5.6 12.34c-1.18 0-2.34-.315-3.356-.908l-.239-.141-2.682.633.717-2.612-.156-.269a6.493 6.493 0 0 1 5.716-9.61c3.584 0 6.5 2.916 6.5 6.5s-2.916 6.5-6.5 6.5zm3.689-4.986c-.202-.101-1.193-.589-1.378-.656-.185-.068-.32-.101-.454.101-.135.202-.52.655-.637.789-.118.135-.236.152-.438.051a5.262 5.262 0 0 1-1.55-.957 5.805 5.805 0 0 1-1.074-1.328c-.113-.195-.012-.3.085-.396.087-.086.202-.219.303-.328.101-.111.135-.185.202-.303.067-.118.034-.236-.017-.336-.051-.101-.454-1.096-.622-1.505-.164-.395-.332-.342-.454-.348l-.387-.007a.862.862 0 0 0-.625.292c-.215.235-.815.796-.815 1.94 0 1.144.835 2.25.951 2.406.118.152 1.642 2.508 3.978 3.51.556.24.99.384 1.328.491.558.177 1.066.152 1.469.092.448-.067 1.193-.487 1.361-.957.168-.47.168-.871.118-.957-.05-.084-.185-.135-.387-.236z"/>
-              </svg>
-            </a>
-
             <!-- E-mail -->
             <a class="d-inline-block social-icon ml-2" target="_blank" href="mailto:{{ site.email }}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
@@ -103,8 +96,8 @@ gtag('config', '{{site.ganalytics}}');
             </svg>
           </button>
           
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto font-weight-bold d-flex align-items-center">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
+            <ul class="navbar-nav font-weight-bold d-flex align-items-center">
               <li class="nav-item">
                 <a class="nav-link px-3" href="{{site.baseurl}}/">Home</a>
               </li>
@@ -152,3 +145,5 @@ gtag('config', '{{site.ganalytics}}');
 </body>
     
 </html>
+
+
