--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,18 +38,20 @@ gtag('config', '{{site.ganalytics}}');
     <nav class="navbar navbar-expand-lg">
         <div class="container">
 
-          <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
-          {% if site.logo %}
-          <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo"> 
-          {% else %}
-          <span class="d-none d-md-inline-block">{{ site.title }}</span>
-          {% endif %}
-          </a> | 
-          
+<div class="d-flex align-items-center justify-content-between w-100">
 
-          <div class="d-flex align-items-center">
-            
-            <span class="ml-3 text-muted small">Conectar</span>
+  <!-- Logo (mantida a estrutura original) -->
+  <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
+    {% if site.logo %}
+      <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo" style="height: 40px;">
+    {% else %}
+      <span class="d-none d-md-inline-block">{{ site.title }}</span>
+    {% endif %}
+  </a>
+
+  <!-- Networking + ícones (sem alteração de conteúdo, só alinhamento) -->
+  <div class="d-flex align-items-center">
+    <span class="ml-3 text-muted small">| Networking |</span>
 
             <!-- LinkedIn -->
             <a class="d-inline-block social-icon" target="_blank" href="{{ site.social.linkedin }}">
