curriculo adicionando as informações pessoais

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,13 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Portfólio para postagem de projetos">
+<meta name="author" content="Rony Vonn Costa Santos">
+<meta name="keywords" content="Análise de dados, TI, Tecnologia, Projetos, Portfólio, Dados, Estudante">
 <link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}">
 
-<title>{{ page.title }} | {{site.title}}</title>
+<title>Rony</title>
 
 {% seo %}
 
