--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,65 +41,65 @@ gtag('config', '{{site.ganalytics}}');
     <nav class="navbar navbar-expand-lg">
         <div class="container">
 
-<div class="d-flex align-items-center justify-content-between w-100">
+<div class="d-flex align-items-center justify-content-between w-100 flex-wrap">
 
-  <!-- Logo (mantida a estrutura original) -->
-  <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
-    {% if site.logo %}
-      <img class="mr-2" src="{{site.baseurl}}{{site.logo}}" alt="logo" style="height: 40px;">
-    {% else %}
-      <span class="d-none d-md-inline-block">{{ site.title }}</span>
-    {% endif %}
+<!-- Logo -->
+<a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center me-3" href="{{site.baseurl}}/">
+  {% if site.logo %}
+    <img class="mr-2" src="{{site.baseurl}}{{site.logo}}" alt="logo" style="height: 40px;">
+  {% else %}
+    <span class="d-none d-md-inline-block">{{ site.title }}</span>
+   {% endif %}
+</a>
+
+<!-- Networking + ícones (sem alteração de conteúdo, só alinhamento) -->
+<div class="d-flex align-items-center">
+  <span class="ml-3 text-muted small">| Networking |</span>
+
+ <!-- LinkedIn -->
+ <a class="d-inline-block social-icon" target="_blank" href="{{ site.social.linkedin }}">
+  <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.473 0 16
+      .513 16 1.146v13.708c0 .633-.527 1.146-1.175 
+      1.146H1.175C.527 16 0 15.487 0 
+      14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 
+      0 1.356-.554 1.356-1.248-.015-.708-.52-1.248-1.342-1.248-.822 
+      0-1.356.54-1.356 1.248 0 .694.519 1.248 
+      1.327 1.248h.015zm4.908 8.212V9.359c0-.213.016-.426.079-.578.173-.426.568-.868 
+      1.231-.868.869 0 1.216.655 1.216 
+      1.615v3.866h2.401V9.292c0-2.22-1.184-3.251-2.764-3.251-1.276 
+      0-1.845.7-2.164 1.193v.025h-.015a5.35 
+      5.35 0 0 1 .015-.025V6.169h-2.4c.03.682 
+      0 7.225 0 7.225h2.4z"/>
+    </svg>
   </a>
 
-  <!-- Networking + ícones (sem alteração de conteúdo, só alinhamento) -->
-  <div class="d-flex align-items-center">
-    <span class="ml-3 text-muted small">| Networking |</span>
+<!-- GitHub -->
+<a class="d-inline-block social-icon ml-2" target="_blank" href="{{ site.social.github }}">
+  <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+    </svg>
+  </a>
 
-            <!-- LinkedIn -->
-            <a class="d-inline-block social-icon" target="_blank" href="{{ site.social.linkedin }}">
-              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.473 0 16
-                  .513 16 1.146v13.708c0 .633-.527 1.146-1.175 
-                  1.146H1.175C.527 16 0 15.487 0 
-                  14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 
-                  0 1.356-.554 1.356-1.248-.015-.708-.52-1.248-1.342-1.248-.822 
-                  0-1.356.54-1.356 1.248 0 .694.519 1.248 
-                  1.327 1.248h.015zm4.908 8.212V9.359c0-.213.016-.426.079-.578.173-.426.568-.868 
-                  1.231-.868.869 0 1.216.655 1.216 
-                  1.615v3.866h2.401V9.292c0-2.22-1.184-3.251-2.764-3.251-1.276 
-                  0-1.845.7-2.164 1.193v.025h-.015a5.35 
-                  5.35 0 0 1 .015-.025V6.169h-2.4c.03.682 
-                  0 7.225 0 7.225h2.4z"/>
-              </svg>
-            </a>
+<!-- E-mail -->
+<a class="d-inline-block social-icon ml-2" target="_blank" href="mailto:{{ site.email }}">
+  <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 
+      2H2a2 2 0 0 1-2-2V4zm13.5-1H2.5A1.5 1.5 0 0 0 1 
+      4v.217l7 4.2 7-4.2V4a1.5 1.5 0 0 0-1.5-1zm.5 
+      2.383-5.803 3.482a.5.5 0 0 1-.394 0L2.5 
+      5.383V12a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 
+      .5-.5V5.383z"/>
+    </svg>
+  </a>
 
-            <!-- GitHub -->
-            <a class="d-inline-block social-icon ml-2" target="_blank" href="{{ site.social.github }}">
-              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-              </svg>
-            </a>
-
-            <!-- E-mail -->
-            <a class="d-inline-block social-icon ml-2" target="_blank" href="mailto:{{ site.email }}">
-              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 
-                        2H2a2 2 0 0 1-2-2V4zm13.5-1H2.5A1.5 1.5 0 0 0 1 
-                        4v.217l7 4.2 7-4.2V4a1.5 1.5 0 0 0-1.5-1zm.5 
-                        2.383-5.803 3.482a.5.5 0 0 1-.394 0L2.5 
-                        5.383V12a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 
-                        .5-.5V5.383z"/>
-              </svg>
-            </a>
-
-          </div>
+</div>
     
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
-              <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-            </svg>
-          </button>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+      <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+    </svg>
+  </button>
           
           <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
             <ul class="navbar-nav font-weight-bold d-flex align-items-center">
