--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,26 @@ Just customize your theme here.
 body {
     margin: 0;
 }
+
+/* Alinha corretamente logo, texto e ícones sociais */
+
+.navbar .navbar-brand img {
+  height: 32px;
+  margin-bottom: 2px;
+}
+
+.navbar .text-muted {
+  font-size: 0.9rem;
+  margin-left: 8px;
+  margin-right: 8px;
+  position: relative;
+  top: 1px;
+}
+
+.navbar .social-icon svg {
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  position: relative;
+  top: 1px;
+}
