Mudança layout (Imagem principal, ad here, e posts)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,6 @@
-<div class="sidebar sticky-top">        
+<!-- Esse bloco abaixo cria a seção do AD (Anuncio)-->
+
+<!-- <div class="sidebar sticky-top">        
     <div class="sidebar-section">
 
     </div>
@@ -6,4 +8,4 @@
         <h5><span>Your Ad Here</span></h5>
         <img src="{{site.baseurl}}/assets/images/ad.png">
     </div>
-</div>
+</div> -->
