--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,7 +137,7 @@ gtag('config', '{{site.ganalytics}}');
     {% endfor %}
     </ul>
     <div class="copyright small">
-       Copyright © {{site.title}}. Todos direitos reservados.
+       Copyright © Aprendizado contínuo. Todos direitos reservados.
     </div>
 </footer>
 
