--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -1,9 +1,13 @@
 <!-- Começar a postar -->
 {% assign author = site.authors[post.author] %}
 <div class="card">
-    <a href="{{ post.url | absolute_url }}">
-        {% if post.image %} <img class="rounded mb-4" src="{{ site.baseurl }}/{{ post.image }}" alt="{{ post.title }}"> {% endif %}
-    </a>
+<a href="{{ post.url | absolute_url }}" class="card-image-link">
+    {% if post.image %} 
+        <div class="img-container">
+            <img class="rounded card-img-standard" src="{{ site.baseurl }}/{{ post.image }}" alt="{{ post.title }}">
+        </div>
+    {% endif %}
+</a>
     <div class="card-block">
         <h2 class="card-title h4 serif-font"><a href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
         <p class="card-text text-muted">{{ post.excerpt | strip_html | truncatewords:15 }}</p>
